resolve deprecation & visible class

--- a/styles/navigation-panel.less
+++ b/styles/navigation-panel.less
@@ -94,6 +94,10 @@
           font-weight: bold;
         }
 
+        &.visible {
+          outline: 1px dashed;
+        }
+
         &.info .navigation-text {
           color: @text-color-info;
         }
